test/tasty/neg-false/src-2/NewJVMEnv.check
NewJVMEnv_fail.scala:9: error: class type required but tastytest.printing#AnyHash with tastytest.printing#AnyClassName found
  new Env.JVMEnv {} // error: class type required but tastytest.printing#AnyHash with tastytest.printing#AnyClassName found
          ^
